precompiles/utils/macro/tests/precompile/compile-fail/handle/set-missing.stderr
error: PrecompileSet methods must have at least 2 parameters (the precompile instance discriminant and the PrecompileHandle)
  --> tests/precompile/compile-fail/handle/set-missing.rs:24:2
   |
24 |     fn foo(_: u32) {
   |     ^^^^^^^^^^^^^^
